# tests-platform

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SETUP.md  environment.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_baseline.py  0002_phase1_tables.py  0003_pool_id.py  0004_tests.py  0005_audit_event.py  0006_test_updated_at_index.py  0007_form_lifecycle.py  0008_drop_test_status.py  0009_item_usage_event.py  0010_loft_session_record.py
backend/app/: __init__.py  main.py
backend/app/assembly/: __init__.py  ata_model.py  blueprint_compiler.py  loft.py  objectives.py  result.py
backend/app/core/: config.py  db.py  logging.py  middleware.py  redis.py
backend/app/engine/: __init__.py  contract.py  registry.py
backend/app/models/: __init__.py  assembly_job.py  audit_event.py  base.py  blueprint.py  form.py  form_review_event.py  item_usage_event.py  loft_record.py  test.py  types.py
backend/app/psychometrics/: __init__.py  analysis.py  bank.py  difficulty.py  information.py  params.py  pools.py  reporting.py  scoring.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py  blueprint.py  comparability.py  generator.py  governance.py  item_bank.py  loft.py  pool.py  preview.py  responses.py  simulation.py  test_config.py  tests.py  validation.py
backend/app/services/: __init__.py  assembly_run.py  audit.py  blueprint_generator.py  curricula.py  form_comparability.py  form_lifecycle.py  form_qa.py  item_bank.py  (+1 more)
(+184 files in other folders)
